--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@aws-amplify/ui-react": "^1.0.6",
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,6 +23,7 @@
     "gh-pages": "^3.1.0",
     "graphql": "^15.5.0",
     "jest": "^26.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dotenv": "^0.1.3",
